--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,7 +22,7 @@
   </head>
 <header> 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
- <a class="navbar-brand navbar-right" href="#"><img src="logo-case.png" height=""></a> 
+ <a class="navbar-brand navbar-right" href="#"><img src="https://www.dropbox.com/s/kjzib6338qedtqr/Logo-case.png?raw=1" "></a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
